learning about form html

--- a/table.html
+++ b/table.html
@@ -7,9 +7,9 @@
     <body>
         <h1 style="text-align: center;">HTML Table </h1>
         <table style="width:100%" border="1" cellpadding="10" cellspacing="0">
-        <table>
             <tr>
-                <thstyle width="40%">Student Information Table</th>
+
+  <thstyle width="40%">Student Information Table</th>
                 <th>Name</th>
                 <th>Age</th>
                 <th>City</th>
@@ -28,7 +28,7 @@
                 <td>Golden Gate Int. College</td>
             </tr>
             <tr>
-                <th>Shashank Yadav</th>
+                <td>Shashank Yadav</th>
                 <th>17</th>
                 <th>Biratnagar</th>
                 <th>Mount Everest College</th>
@@ -39,6 +39,6 @@
                 <td>Birjung </td>
                 <td>Mount Everest College</td>
             </tr>
-      
+        </table>
           
     </body>
